upgrade to gradle version 9.4.0